jpa repository impl + h2 impl + collection mapping improved + different req and res objects for meteorogical data impl
