# src/main/java/com/cleverlance/academy/tofu/iotServer/controller/mapper/MeteorologicalDataMapper.java
@@ -1,12 +1,20 @@
 package com.cleverlance.academy.tofu.iotServer.controller.mapper;
 
 import org.mapstruct.Mapper;
-import org.openapitools.model.MeteorologicalData;
+import org.mapstruct.Mapping;
+import org.mapstruct.Mappings;
+import org.openapitools.model.MeteorologicalDataBase;
+import org.openapitools.model.MeteorologicalDataWithTimeStampAndId;
+
+import java.util.List;
 
 @Mapper
 public interface MeteorologicalDataMapper {
 
-    MeteorologicalData toOpenApiMeteorologicalData(com.cleverlance.academy.tofu.iotServer.model.MeteorologicalData meteorologicalData);
-    com.cleverlance.academy.tofu.iotServer.model.MeteorologicalData fromOpenApiMeteorologicalData(MeteorologicalData meteorologicalData);
+    @Mapping(target = "timestamp", source = "timeStamp")
+    MeteorologicalDataWithTimeStampAndId toOpenApiMeteorologicalData(com.cleverlance.academy.tofu.iotServer.model.MeteorologicalData meteorologicalData);
+
+    List<MeteorologicalDataWithTimeStampAndId> toOpenApiListOdMeteorologicalData(List<com.cleverlance.academy.tofu.iotServer.model.MeteorologicalData> meteorologicalDataList);
+    com.cleverlance.academy.tofu.iotServer.model.MeteorologicalData fromOpenApiMeteorologicalData(MeteorologicalDataBase meteorologicalData);
 
 }
