# src/main/java/com/cleverlance/academy/tofu/iotServer/model/MeteorologicalData.java
@@ -1,11 +1,29 @@
 package com.cleverlance.academy.tofu.iotServer.model;
 
-import lombok.Value;
+import lombok.Data;
 
-@Value
+import javax.persistence.*;
+import java.time.LocalDateTime;
+import java.time.OffsetDateTime;
+
+@Entity
+@Data
+@Table(name = "meteorological_data_records")
 public class MeteorologicalData {
 
+    @Id
+    @GeneratedValue
+    @Column(name = "id")
+    private Integer id;
+    @Column(name = "temperature")
     private Float temperature;
+    @Column(name = "humidity")
     private Float humidity;
+    @Column(name = "light")
+    private Float light;
+    @Column(name = "pressure")
+    private Float pressure;
+    @Column(name = "timestamp")
+    private OffsetDateTime timeStamp;
 
 }
