# src/main/java/com/cleverlance/academy/tofu/iotServer/service/MeteorologicalDataServiceImpl.java
@@ -1,26 +1,30 @@
 package com.cleverlance.academy.tofu.iotServer.service;
 
 import com.cleverlance.academy.tofu.iotServer.model.MeteorologicalData;
-import com.cleverlance.academy.tofu.iotServer.repository.MeteorologicalDataRepository;
+import com.cleverlance.academy.tofu.iotServer.repository.JpaMeteorologicalDataRepository;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDateTime;
+import java.time.OffsetDateTime;
 import java.util.List;
 
 @Service
 public class MeteorologicalDataServiceImpl implements MeteorologicalDataService{
 
-    private final MeteorologicalDataRepository meteorologicalDataRepository;
-    public MeteorologicalDataServiceImpl(MeteorologicalDataRepository meteorologicalDataRepository) {
+    private final JpaMeteorologicalDataRepository meteorologicalDataRepository;
+
+    public MeteorologicalDataServiceImpl(JpaMeteorologicalDataRepository meteorologicalDataRepository) {
         this.meteorologicalDataRepository = meteorologicalDataRepository;
     }
 
     @Override
     public void saveMeteorologicalData(MeteorologicalData meteorologicalData) {
-        this.meteorologicalDataRepository.saveMeteorologicalData(meteorologicalData);
+        meteorologicalData.setTimeStamp(OffsetDateTime.now());
+        this.meteorologicalDataRepository.save(meteorologicalData);
     }
 
     @Override
     public List<MeteorologicalData> getMeteorologicalData() {
-        return this.meteorologicalDataRepository.getMeteorologicalData();
+        return this.meteorologicalDataRepository.findAll();
     }
 }
